compiler-skeleton/tests/compile-error/comp_while.ln
a:int;

while 45 ;

while a { ;}